Update file properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,8 @@ spring.http.encoding.force=true
 upload.music-dir=uploads/music
 upload.image-dir=uploads/image
 upload.avatar-dir=uploads/avatar
+upload.image-playlist-dir=uploads/imagePlaylist
+
 
 
 
